--- a/docker/evohome-prometheus-export.service
+++ b/docker/evohome-prometheus-export.service
@@ -14,7 +14,7 @@ Restart=always
 ExecStartPre=-/usr/bin/docker kill %n
 ExecStartPre=-/usr/bin/docker rm %n
 ExecStartPre=-/usr/bin/docker pull ${DOCKER_IMAGE}
-ExecStart=/usr/bin/docker run --dns=${DNS_SERVER} -p 8080:8080 --rm --name %n ${DOCKER_IMAGE}
+ExecStart=/usr/bin/docker run --dns=${DNS_SERVER} -p 8080:8080 -e EVOHOME_USERNAME=${EVOHOME_USERNAME} -e EVOHOME_PASSWORD=${EVOHOME_PASSWORD} --rm --name %n ${DOCKER_IMAGE}
 ExecStop=/usr/bin/docker stop --time=60 %n
 ExecStopPost=-/usr/bin/docker rm %n
 
